changed hero images to be positioned absolutely for mobile sized devices to avoid the 'flickering' effect from scrolling on iOS.

--- a/asset/src/scss/content/_heroes.scss
+++ b/asset/src/scss/content/_heroes.scss
@@ -13,7 +13,12 @@ section.hero {
 	img {
 		min-height: 100%;
 		min-width: 100%;
-		position: fixed;
+		position: absolute;
+
+		@include breakpoint(medium) {
+			position: fixed;	
+		}
+		
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
